run_spec(__dirname, ["html"]);
run_spec(__dirname, ["html"], { embeddedLanguageFormatting: "off" });
